--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 * {
 	margin: 0;
@@ -25,21 +25,19 @@
 	--text-para: "Rubik", serif;
 }
 
-
-
 main {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
 	background-color: var(--white-smoke);
-
 }
 
 header {
 	background-color: var(--white-smoke);
 }
 
-.header-container, .container {
+.header-container,
+.container {
 	width: 90%;
 	max-width: 1440px;
 	margin: 0 auto;
@@ -103,7 +101,6 @@ header {
 	gap: 0.25rem;
 }
 
-
 .user-info h1 {
 	font-family: var(--text-headers);
 	font-weight: 200;
@@ -129,10 +126,20 @@ button {
 }
 
 #add-book {
+	position: sticky;
+	bottom: 3rem;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background-color: var(--moonstone-dark);
 	border: 1px solid transparent;
 	color: white;
-	margin: 0 auto;
+	border-radius: 50%;
+	height: 4rem;
+	width: 4rem;
+	font-size: 3rem;
 	&:hover {
 		background-color: var(--moonstone);
 	}
@@ -203,7 +210,7 @@ button {
 	flex-direction: column;
 }
 
-.card-xl.variation-small .card-xl__info  {
+.card-xl.variation-small .card-xl__info {
 	width: 100%;
 	height: 25%;
 }
@@ -236,13 +243,18 @@ button {
 	width: 100%;
 }
 
+.card-xl.variation-small .info-progress {
+	display: none;
+}
+
 .card-xl__info .info-progress h3 {
 	font-family: var(--text-headers);
 	color: var(--dark-grey);
 	letter-spacing: 1px;
 }
 
-.card-xl__info .info-progress p, .card-xl__info .info-progress p span {
+.card-xl__info .info-progress p,
+.card-xl__info .info-progress p span {
 	font-size: 0.75rem;
 	color: var(--dark-grey);
 	letter-spacing: 1px;
@@ -265,3 +277,108 @@ button {
 	background-color: var(--dark-grey);
 }
 
+.add-form-container {
+	display: none;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0.8);
+	background: var(--white-smoke);
+	padding: 3rem 2rem;
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+	border-radius: 8px;
+	opacity: 0;
+	transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.add-form-container.show {
+	display: block;
+	opacity: 1;
+	transform: translate(-50%, -50%) scale(1);
+}
+
+.add-form-container.hide {
+	opacity: 0;
+	transform: translate(-50%, -50%) scale(0.8);
+	transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+}
+
+#add-form input,
+#add-form select {
+	width: 100%;
+	padding: 0.75rem 0.5rem;
+	background-color: var(--white-smoke);
+	outline: none;
+	border: none;
+	border-bottom: 2px solid var(--shadow);
+	font-size: 1rem;
+	border-radius: 4px;
+}
+
+#add-form select {
+	appearance: none;
+	cursor: pointer;
+}
+
+.form-control,
+.form-control-select {
+	margin-bottom: 2rem;
+}
+
+.form-control-select {
+	position: relative;
+}
+
+.form-control-select::after {
+	content: "▼";
+	position: absolute;
+	top: 50%;
+	right: 10px;
+	transform: translateY(-50%);
+	pointer-events: none;
+	color: var(--shadow);
+	font-size: 0.8rem;
+}
+
+#add-form input::placeholder {
+	color: var(--shadow);
+	opacity: 0.7;
+}
+
+#add-form input:hover,
+#add-form select:hover {
+	background-color: rgba(245, 245, 245, 0.8);
+}
+
+#add-form button {
+	background: var(--moonstone);
+	color: white;
+	border: none;
+	padding: 0.75rem;
+	width: 100%;
+	font-size: 1rem;
+	cursor: pointer;
+	border-radius: 4px;
+	margin-top: 1rem;
+}
+
+#add-form button:hover {
+	background: var(--moonstone-dark);
+}
+
+.close-btn {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background: none;
+	border: none;
+	font-size: 1.5rem;
+	color: var(--shadow);
+	cursor: pointer;
+	transition: color 0.3s ease-in-out;
+}
+
+.close-btn:hover {
+	color: var(--primary-color);
+	transform: scale(1.2);
+}
