--- a/style.css
+++ b/style.css
@@ -303,8 +303,8 @@ button {
 	transition: transform 0.3s ease-in, opacity 0.3s ease-in;
 }
 
-#add-form input,
-#add-form select {
+input,
+select {
 	width: 100%;
 	padding: 0.75rem 0.5rem;
 	background-color: var(--white-smoke);
@@ -315,7 +315,7 @@ button {
 	border-radius: 4px;
 }
 
-#add-form select {
+select {
 	appearance: none;
 	cursor: pointer;
 }
@@ -340,17 +340,17 @@ button {
 	font-size: 0.8rem;
 }
 
-#add-form input::placeholder {
+input::placeholder {
 	color: var(--shadow);
 	opacity: 0.7;
 }
 
-#add-form input:hover,
-#add-form select:hover {
+input:hover,
+select:hover {
 	background-color: rgba(245, 245, 245, 0.8);
 }
 
-#add-form button {
+#add-form button, .modal-content button {
 	background: var(--moonstone);
 	color: white;
 	border: none;
@@ -362,7 +362,7 @@ button {
 	margin-top: 1rem;
 }
 
-#add-form button:hover {
+#add-form button:hover, .modal-content button {
 	background: var(--moonstone-dark);
 }
 
@@ -382,3 +382,39 @@ button {
 	color: var(--primary-color);
 	transform: scale(1.2);
 }
+
+.book-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: left;
+}
+
+.modal-content button {
+    margin-top: 10px;
+}
+
+.close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
