--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ hr {
 
 .avatar {
 	object-fit: cover;
-	border: 2px solid var(--black);
+	border: 1px solid var(--black);
+	box-shadow: 0 0 4px 4px var(--black);
 }
 
 .header-bottom {
@@ -549,6 +550,10 @@ select:hover {
 	padding: 4rem;
 	width: 66vw;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .auth-container h1 {
@@ -579,8 +584,20 @@ select:hover {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 40px;
+	padding: 4rem;
 	flex: 0 0 none;
+}
+
+.banner-title {
+	font-size: 3rem;
+	margin-bottom: 1rem;
+	font-weight: bolder;
+}
+
+.banner-text {
+	font-size: 1.5rem;
+	margin-bottom: 2rem;
+	letter-spacing: 2px;
 }
 
 .input-container input {
@@ -644,6 +661,7 @@ select:hover {
 .btn.btn-secondary {
 	background: var(--white-smoke);
 	color: var(--dark-grey);
+	width: 300px;
 }
 
 .btn.btn-secondary:hover {
