--- a/style.css
+++ b/style.css
@@ -586,6 +586,17 @@ footer {
 	margin: 0 auto;
 }
 
+.recover {
+	margin-top: 1rem;
+	font-size: 1.2rem;
+	text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+	color: var(--moonstone-dark);
+	&:hover {
+		color: var(--dark-grey);
+	}
+}
+
 .auth-banner {
 	width: 100%;
 	max-width: 33vw;
@@ -760,7 +771,7 @@ footer {
 	}
 
 	.user-profile p {
-		display: none;
+		/* display: none; */
 	}
 
 	.modal-content {
@@ -790,6 +801,10 @@ footer {
 		margin: 0;
 	}
 
+	.add-form-container {
+		z-index: 9999;
+	}
+
 	#add-book {
 		position: sticky;
 		bottom: 1rem;
@@ -814,5 +829,28 @@ footer {
 		&:active {
 			box-shadow: 0 2px 2px 1px var(--shadow);
 		}
+	}
+
+	#auth-main {
+		flex-direction: column;
+		height: auto;
+	}
+
+	.auth-banner {
+		width: 100%;
+		height: 100%;
+		padding: 1rem;
+		padding-bottom: 4rem;
+		max-width: max-content;
+	}
+
+	.auth-container {
+		width: 100%;
+		padding: 1rem;
+		padding-top: 2rem;
+	}
+
+	.auth-container form {
+		width: 100%;
 	}
 }
